--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
 
       <div class="row">
         <div class="column">
-          <img class="square-image" src="./images/timg.jpg" alt="KFC1">
+          <img class="square-image" src="./images/timg.jpg" alt="KFC0">
         </div>
         <div class="column">
-          <img class="square-image" src="/images/timg1.jpg" alt="KFC2">
+          <img class="square-image" src="./images/timg1.jpg" alt="KFC1">
         </div>
       </div>
 
       <div class="row">
         <div class="column">
-          <img class="square-image" src="/images/timg2.jpg" alt="KFC3">
+          <img class="square-image" src="./images/timg2.jpg" alt="KFC2">
         </div>
         <div class="column">
-          <img class="square-image" src="/images/timg3.jpg" alt="KFC4">
+          <img class="square-image" src="./images/timg3.jpg" alt="KFC3">
         </div>
       </div>
 
       <div class="main-title">
               <h2>China's KFC VS US's KFC(Click the picture)!!!</h2>
               <a href="https://www.youtube.com/watch?v=uMnEwoMZUt8" target="_blank">
-              <img class="square-image" src="/images/timg4.jpg" alt="C VS U">
+              <img class="square-image" src="./images/timg4.jpg" alt="C VS U">
               </a>
       </div>
 
